feat(): [#MEX-412] refacto & manage multi class or etab